--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,9 @@
   "require": {
     "composer/installers": "^1.2",
     "drupal-composer/preserve-paths": "^0.1",
+    "johnpbloch/wordpress-core": "~6.0",
     "johnpbloch/wordpress-core-installer": "^2.0",
-    "johnpbloch/wordpress-core": "~6.0"
+    "wpackagist-plugin/show-current-template": "^0.5.2"
   },
   "extra": {
     "installer-paths": {
