--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "drupal-composer/preserve-paths": "^0.1",
     "johnpbloch/wordpress-core": "~6.0",
     "johnpbloch/wordpress-core-installer": "^2.0",
+    "wpackagist-plugin/advanced-custom-fields": "^6.2",
     "wpackagist-plugin/show-current-template": "^0.5.2"
   },
   "extra": {
