added new css and acf

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ web/wp-content/*
 !web/wp-content/themes/
 web/wp-content/themes/*
 !web/wp-content/themes/rankexperts/
+# Exclude auth.json from Git repo
+auth.json
