--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,14 @@
       "role": ""
     }
   ],
-  "repositories":[
+  "repositories": [
     {
-      "type":"composer",
-      "url":"https://wpackagist.org"
+      "type": "composer",
+      "url": "https://wpackagist.org"
+    },
+    {
+      "type": "composer",
+      "url": "https://connect.advancedcustomfields.com"
     }
   ],
   "minimum-stability": "dev",
@@ -31,8 +35,8 @@
     "drupal-composer/preserve-paths": "^0.1",
     "johnpbloch/wordpress-core": "~6.0",
     "johnpbloch/wordpress-core-installer": "^2.0",
-    "wpackagist-plugin/advanced-custom-fields": "^6.2",
-    "wpackagist-plugin/show-current-template": "^0.5.2"
+    "wpackagist-plugin/show-current-template": "^0.5.2",
+    "wpengine/advanced-custom-fields-pro": "^6.2"
   },
   "extra": {
     "installer-paths": {
