--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     "johnpbloch/wordpress-core": "~6.0",
     "johnpbloch/wordpress-core-installer": "^2.0",
     "wpackagist-plugin/contact-form-7": "^5.8",
+    "wpackagist-plugin/contact-form-7-skins": "^2.6",
     "wpackagist-plugin/copy-delete-posts": "^1.4",
     "wpackagist-plugin/show-current-template": "^0.5.2",
     "wpengine/advanced-custom-fields-pro": "^6.2"
